CHANGELOG for Plupload integration for Drupal 7

Plupload integration 7.x-1.x-dev
================================
- #1300620 by jamiecuthill, ksenzee: Update to 1.5.1.1 because uploading is broken in Firefox 7
- #1121070 by Moloc: Warning: unlink(...) [function.unlink]: Permission denied in plupload_handle_uploads()
- #1348892 by slashrsm, Moloc: Show library version in status report
- #1267190 by Moloc: Plupload transliteration support for d7
- #1240654 by Dave Reid: Use a proper namespace for file_uri_to_object().